# trash-code

./: README.md
1-theory/: README.md
asn1-viewer-spec/: README.md
calling-C-from-Rust/: .gitignore  Cargo.toml  README.md  build.rs  simplelib.c  simplelib.h
calling-C-from-Rust/src/: main.rs  simplelib.rs
calling-Rust-from-C/: .gitignore  Cargo.toml  README.md  main.c  simplelib.h
calling-Rust-from-C/src/: lib.rs
clap-recipes/img-tool/: Cargo.toml
clap-recipes/values-collection/: Cargo.toml
debugging-with-api-monitor/: imgur_api.xml
debugging-with-api-monitor/TestImgurDll/: .editorconfig  .gitignore  TestImgurDll.sln
debugging-with-api-monitor/imgur-api-client/: Cargo.toml
debugging-with-api-monitor/imgur-api-dll/: Cargo.toml  imgur_api.h
docker-rust-examples/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
docker-rust-examples/src/: logging.rs  main.rs
git-lection/: README.md
git-lection/tbt-app/: Cargo.toml
grafily_demo/genealogy/: Adam_Crosby.md  Alica_Mondor.md  Andrew_Mondor.md  Barbara_Anderson.md  Charles_Peterson.md  Chris_Mondor.md  David_Mondor.md  (+27 more)
reverse_freerdp_scard_auth/: ca_cert.cer  cmake.log.txt  cmds.sh  env  krb5.conf
rpc-decryptor/: Cargo.toml
rust-macro-example/: Cargo.toml  README.md
scard-container-name/: t2@tbt.com.cer
serde-lection/: README.md  lab.md
sspi-introduction/: Cargo.toml  README.md
sspi-introduction/src/: authentication.rs  clean_up.rs  credentials.rs  initialization.rs  main.rs  signature.rs  utils.rs
tauri-error-handling/: Cargo.toml
what-the-hype-is-all-about/: Cargo.toml
(+71 files in other folders)
