[package]
name = "sspi-introduction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
sspi = "0.8.1"
winapi = { version = "0.3.9", features = ["sspi"] }
windows-sys = { version = "0.48.0", features = ["Win32_Security_Authentication_Identity", "Win32_Foundation", "Win32_Security_Credentials"] }
